# network-guy

./: .gitignore  AI_Network_Troubleshooting_UseCase.docx  ANALYSIS.md  ATTACK_DETECTION_PLAN.md  BRIEF.md  DATA_SUMMARY.md  FINAL_PLAN.md  IMPLEMENTATION_PLAN.md  NETFIX_AI_WEBSITE_PLAN.md  NETWORKING_101_AND_ERRORS.md  README.md  SAMPLE_DATA_ANALYSIS.md  SYSTEM_EXECUTION_FLOW.md  pyproject.toml
.claude/memory/: user_api_keys.md
data/: device_inventory.csv  incident_tickets.json  network_topology.json  snmp_metrics.csv  traffic_flows.csv
src/network_guy/: __init__.py  cli.py  llm.py  models.py  repl.py  supervisor.py
src/network_guy/agents/: incident.py  log_analyst.py  metrics.py  topology.py
src/network_guy/agents/security/: anomaly.py  correlator.py  security_agent.py  signatures.py
src/network_guy/data/: embedder.py  loader.py
src/network_guy/prompts/: system.py
src/network_guy/stores/: graph.py  metrics_db.py  vector.py
website/: index.html  package-lock.json  package.json
website/src/: App.jsx  index.css
website/src/canvas/: GlobeCanvas.jsx  ParticleCanvas.jsx
website/src/components/: ArchSection.jsx  BonusSection.jsx  CommandsSection.jsx  DeliverablesSection.jsx  HeroSection.jsx  Navbar.jsx  StatsSection.jsx  TerminalSection.jsx
website/src/hooks/: useAnimatedMount.js  useIntersection.js
