[project]
name = "network-guy"
version = "0.1.0"
description = "AI-Powered Network Troubleshooting Assistant for Telecom Test Labs"
authors = [
    {name = "shaz"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=3.0.0",
    "networkx>=3.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.scripts]
network-guy = "network_guy.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100
